--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "杨辉三角.md",
+            "file": "手写实现Promise.md",
             "mode": "preview",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "preload",
+                "query": "promise",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -49,7 +49,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -69,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "杨辉三角.md",
+                "file": "手写实现Promise.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +87,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "杨辉三角.md",
+                "file": "手写实现Promise.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +99,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "杨辉三角.md"
+                "file": "手写实现Promise.md"
               }
             }
           },
@@ -122,15 +123,15 @@
   },
   "active": "17e63b0a9e747fed",
   "lastOpenFiles": [
+    "手写实现Promise.md",
+    "Promise.md",
+    "连续区间.md",
+    "LeetCode 记录.md",
     "杨辉三角.md",
     "多图站点性能优化.md",
     "浏览器.md",
     "Web性能优化.md",
     "preload&prefetch.md",
-    "Ajax.md",
-    "跨域.md",
-    "回流与重绘.md",
-    "浏览器渲染.md",
-    "浏览器渲染过程.md"
+    "Ajax.md"
   ]
 }
