--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "e9b6caaf33e88d9b",
+        "id": "99c605e4335acb99",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Vue diff 算法.md",
+            "file": "排序算法总结.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "diff",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -71,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Vue diff 算法.md",
+                "file": "排序算法总结.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,7 +88,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Vue diff 算法.md",
+                "file": "排序算法总结.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -100,7 +100,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Vue diff 算法.md"
+                "file": "排序算法总结.md"
               }
             }
           },
@@ -122,17 +122,17 @@
     "direction": "horizontal",
     "width": 293.6000061035156
   },
-  "active": "e9b6caaf33e88d9b",
+  "active": "99c605e4335acb99",
   "lastOpenFiles": [
+    "排序算法总结.md",
+    "FE_knowledge.md",
+    "Vue2 响应式原理.md",
     "Vue diff 算法.md",
     "vue2 vs vue3.md",
     "100 道面试题.md",
     "TCP 协议.md",
     "requestAnimationFrame.md",
     "CDN 缓存.md",
-    "网络与缓存.md",
-    "浏览器.md",
-    "浏览器渲染.md",
-    "浏览器渲染过程.md"
+    "网络与缓存.md"
   ]
 }
