--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "DOM Tree 理解.md",
+            "file": "浏览器存储.md",
             "mode": "preview",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "DOM tree",
+                "query": "file:安全",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "DOM Tree 理解.md",
+                "file": "浏览器存储.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "DOM Tree 理解.md",
+                "file": "浏览器存储.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -99,7 +99,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "DOM Tree 理解.md"
+                "file": "浏览器存储.md"
               }
             }
           },
@@ -114,8 +114,7 @@
               }
             }
           }
-        ],
-        "currentTab": 2
+        ]
       }
     ],
     "direction": "horizontal",
@@ -123,15 +122,15 @@
   },
   "active": "e9b6caaf33e88d9b",
   "lastOpenFiles": [
-    "DOM Tree 理解.md",
-    "浏览器总览.md",
-    "preload&prefetch.md",
-    "前端工程化.md",
-    "babel.md",
-    "JS 作用域和作用域链.md",
-    "二叉树(基于 JavaScript 实现).md",
-    "GC 机制.md",
-    "内存管理.md",
-    "Web性能优化.md"
+    "浏览器存储.md",
+    "cookie安全策略.png",
+    "前端安全.md",
+    "HTTP 状态码.md",
+    "总结项目知识点.md",
+    "vue2 vs vue3.md",
+    "vue3 生命周期变化.md",
+    "浏览器跨域.md",
+    "FE_knowledge.md",
+    "HTTP 缓存机制.md"
   ]
 }
