--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "webpack 打包优化.md",
+            "file": "n维数组的最大深度 & N 叉树的最大深度.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "webpack 优化",
+                "query": "数组",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "webpack 打包优化.md",
+                "file": "n维数组的最大深度 & N 叉树的最大深度.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "webpack 打包优化.md",
+                "file": "n维数组的最大深度 & N 叉树的最大深度.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -99,7 +99,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "webpack 打包优化.md"
+                "file": "n维数组的最大深度 & N 叉树的最大深度.md"
               }
             }
           },
@@ -123,15 +123,15 @@
   },
   "active": "e9b6caaf33e88d9b",
   "lastOpenFiles": [
-    "webpack 打包优化.md",
+    "n维数组的最大深度 & N 叉树的最大深度.md",
+    "编程题.md",
     "Web性能优化.md",
+    "webpack 打包优化.md",
     "编写 webpack loader.md",
     "LeetCode 记录.md",
     "更加优雅地处理async-await.md",
     "规范化.md",
     "函数, 函数参数 arguments.md",
-    "防抖&节流.md",
-    "二叉树(基于 JavaScript 实现).md",
-    "多图站点性能优化.md"
+    "防抖&节流.md"
   ]
 }
