--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "12ba7cf5910f74db",
+        "id": "8a09fec1b5f797a1",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "项目总结/首页白屏优化.md",
-            "mode": "preview",
+            "file": "前端工程/babel.md",
+            "mode": "source",
             "source": false
           }
         }
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 342
+    "width": 282
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "项目总结/首页白屏优化.md",
+                "file": "前端工程/babel.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "项目总结/首页白屏优化.md",
+                "file": "前端工程/babel.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "项目总结/首页白屏优化.md"
+                "file": "前端工程/babel.md"
               }
             }
           },
@@ -112,24 +112,33 @@
                 "useHierarchy": true
               }
             }
+          },
+          {
+            "id": "43051b9deb2db36f",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 232
+    "width": 151
   },
-  "active": "12ba7cf5910f74db",
+  "active": "8a09fec1b5f797a1",
   "lastOpenFiles": [
-    "项目总结/首页白屏优化.md",
-    "网络/SYN cookie.md",
-    "小程序/双线程生命周期.png",
-    "前端工程/Web性能优化.md",
-    "TypeScript/TS any, void, unknown, never 的区别.md",
-    "项目总结/多图站点性能优化.md",
-    "webpack/编写 webpack loader.md",
-    "webpack/webpack source map.md",
-    "webpack/hmr.png",
-    "webpack/webpack HMR 热更新.md"
+    "前端工程/babel.md",
+    "其它/RxJS.md",
+    "其它/Code Review 摘要事项.md",
+    "其它/输入URL到显示页面全过程.md",
+    "网络/TCP 协议.md",
+    "浏览器&DOM HTML/浏览器渲染过程.md",
+    "网络/HTTP 缓存.md",
+    "HTTPS加密.md",
+    "网络/TLS握手协议.md",
+    "网络/HTTPS 加密.md"
   ]
 }
