--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "8a09fec1b5f797a1",
+        "id": "0dda033847d2ad20",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端工程/babel.md",
+            "file": "DNS 解析优化.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "阻塞",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端工程/babel.md",
+                "file": "DNS 解析优化.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "前端工程/babel.md",
+                "file": "DNS 解析优化.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端工程/babel.md"
+                "file": "DNS 解析优化.md"
               }
             }
           },
@@ -128,17 +128,17 @@
     "direction": "horizontal",
     "width": 151
   },
-  "active": "8a09fec1b5f797a1",
+  "active": "0dda033847d2ad20",
   "lastOpenFiles": [
-    "前端工程/babel.md",
-    "其它/RxJS.md",
-    "其它/Code Review 摘要事项.md",
+    "DNS 解析优化.md",
     "其它/输入URL到显示页面全过程.md",
-    "网络/TCP 协议.md",
+    "其它/DNS 解析过程.png",
     "浏览器&DOM HTML/浏览器渲染过程.md",
-    "网络/HTTP 缓存.md",
-    "HTTPS加密.md",
-    "网络/TLS握手协议.md",
-    "网络/HTTPS 加密.md"
+    "浏览器&DOM HTML/浏览器渲染.md",
+    "浏览器&DOM HTML/preload&prefetch.md",
+    "浏览器&DOM HTML/browser-事件流程.png",
+    "浏览器&DOM HTML/浏览器事件.md",
+    "浏览器&DOM HTML/浏览器回流与重绘.md",
+    "前端工程/babel.md"
   ]
 }
