--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "1V1 简历指导.md",
+            "file": "Vue/Vue2 模板编译过程.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "1V1 简历指导.md",
+                "file": "Vue/Vue2 模板编译过程.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "1V1 简历指导.md",
+                "file": "Vue/Vue2 模板编译过程.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "1V1 简历指导.md"
+                "file": "Vue/Vue2 模板编译过程.md"
               }
             }
           },
@@ -129,15 +129,15 @@
   },
   "active": "0dda033847d2ad20",
   "lastOpenFiles": [
-    "1V1 简历指导.md",
-    "小程序/小程序技术原理.md",
-    "小程序/小程序.md",
-    "前端工程/前端工程.md",
-    "前端工程/前端安全.md",
-    "前端工程/规范化.md",
-    "前端工程/rollup.md",
-    "前端工程/Nginx.md",
-    "前端工程/CommonJs 是如何导致打包体积增大_摘要.md",
-    "前端工程/Web性能优化.md"
+    "Vue/Vue2 模板编译过程.md",
+    "TypeScript/TypeScript.md",
+    "TypeScript/TypeScript 编码规范.md",
+    "TypeScript/TS any, void, unknown, never 的区别.md",
+    "Vue/Vue2 响应式原理.md",
+    "Vue/Vue.md",
+    "Vue/Vue $nextTick.md",
+    "算法/0 算法记录.md",
+    "Vue/Vue props.md",
+    "Vue/Vue eventBus.md"
   ]
 }
