--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "2675fe1f4bb43142",
+        "id": "9eb7407f22cdb78f",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "TODO-list.md",
+            "file": "项目总结/总结项目知识点.md",
             "mode": "source",
             "source": false
           }
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 282
+    "width": 196
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "TODO-list.md",
+                "file": "项目总结/总结项目知识点.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "TODO-list.md",
+                "file": "项目总结/总结项目知识点.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "TODO-list.md"
+                "file": "项目总结/总结项目知识点.md"
               }
             }
           },
@@ -122,23 +122,24 @@
             }
           }
         ],
-        "currentTab": 2
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
-    "width": 201.60000610351562
+    "width": 201.60000610351562,
+    "collapsed": true
   },
-  "active": "2675fe1f4bb43142",
+  "active": "9eb7407f22cdb78f",
   "lastOpenFiles": [
-    "TODO-list.md",
-    "react/react 问题汇总.md",
-    "算法/算法- 字符串 ASC 码, 偏移量实现字符串加密.md",
-    "DNS 解析优化.md",
-    "其它/算法导图.png",
-    "其它/1V1 简历指导.md",
-    "其它/技术人才要求.png",
-    "浏览器&DOM HTML/GC 机制.md",
-    "浏览器&DOM HTML/浏览器总览.md",
-    "Vue/Vue2 模板编译过程.md"
+    "项目总结/总结项目知识点.md",
+    "React/react Fiber 架构.md",
+    "React/react 问题汇总.md",
+    "React/react 架构.md",
+    "其它/输入URL到显示页面全过程.md",
+    "React/0 React.md",
+    "React/react-renderer.png",
+    "FrontEnd-knowledge索引.md",
+    "100 道面试题.md",
+    "FE_knowledge.md"
   ]
 }
