--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "8d34e9d348d0b36c",
+        "id": "ab1d8d6a15da336f",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "React/React diff 算法.md",
+            "file": "算法/0 算法记录.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "闭包",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 196
+    "width": 283
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "React/React diff 算法.md",
+                "file": "算法/0 算法记录.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "React/React diff 算法.md",
+                "file": "算法/0 算法记录.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "React/React diff 算法.md"
+                "file": "算法/0 算法记录.md"
               }
             }
           },
@@ -122,24 +122,23 @@
             }
           }
         ],
-        "currentTab": 4
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 201.60000610351562,
-    "collapsed": true
+    "width": 225
   },
-  "active": "8d34e9d348d0b36c",
+  "active": "ab1d8d6a15da336f",
   "lastOpenFiles": [
-    "React/React diff 算法.md",
-    "React/react Fiber 架构.md",
-    "前端工程/Web性能优化.md",
-    "React/react 架构.md",
-    "前端工程/1.模块化.md",
-    "前端工程/实现 CLI.md",
-    "项目总结/SSO 单点登录.md",
-    "前端工程/前端表单配置化.md",
-    "React/0 React.md",
-    "React/react setState 机制.md"
+    "算法/0 算法记录.md",
+    "算法/二叉树(基于 JavaScript 实现).md",
+    "算法/算法- 字符串 ASC 码, 偏移量实现字符串加密.md",
+    "算法/算法-连续区间.md",
+    "算法/算法-将列表还原为树状结构.md",
+    "webpack/webpack 打包优化.md",
+    "Vue/Vue2 模板编译过程.md",
+    "浏览器&DOM HTML/浏览器渲染过程.md",
+    "浏览器&DOM HTML/浏览器构成.md",
+    "综合/输入URL到显示页面全过程.md"
   ]
 }
