--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "算法/0 算法记录.md",
+            "file": "前端工程/React-CLI 代码模板快速生成.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "闭包",
+                "query": "复制代码",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "算法/0 算法记录.md",
+                "file": "前端工程/React-CLI 代码模板快速生成.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "算法/0 算法记录.md",
+                "file": "前端工程/React-CLI 代码模板快速生成.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": false
               }
@@ -98,7 +98,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "算法/0 算法记录.md"
+                "file": "前端工程/React-CLI 代码模板快速生成.md"
               }
             }
           },
@@ -130,15 +130,15 @@
   },
   "active": "ab1d8d6a15da336f",
   "lastOpenFiles": [
-    "算法/0 算法记录.md",
-    "算法/二叉树(基于 JavaScript 实现).md",
-    "算法/算法- 字符串 ASC 码, 偏移量实现字符串加密.md",
-    "算法/算法-连续区间.md",
-    "算法/算法-将列表还原为树状结构.md",
-    "webpack/webpack 打包优化.md",
-    "Vue/Vue2 模板编译过程.md",
-    "浏览器&DOM HTML/浏览器渲染过程.md",
-    "浏览器&DOM HTML/浏览器构成.md",
-    "综合/输入URL到显示页面全过程.md"
+    "前端工程/React-CLI 代码模板快速生成.md",
+    "项目总结/RBCA 权限控制.md",
+    "webpack/package.json 字段说明.md",
+    "前端工程/前端安全.md",
+    "前端工程/monorepo 踩坑.md",
+    "小程序/小程序开发总结.md",
+    "JavaScript/JSBridge.md",
+    "前端工程/前端表单配置化.md",
+    "浏览器&DOM HTML/浏览器跨域 CORS.md",
+    "浏览器&DOM HTML/浏览器跨域.md"
   ]
 }
