--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,7 @@
 {
   "baseFontSize": 16,
-  "theme": "moonstone",
+  "theme": "system",
   "translucency": false,
-  "cssTheme": "Minimal"
+  "cssTheme": "Minimal",
+  "accentColor": ""
 }
