--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "a1da157c1d70b7ba",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "前端工程/React-CLI 代码模板快速生成.md",
+            "mode": "preview",
+            "source": false
+          }
         }
       }
     ],
@@ -49,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 224
+    "width": 296.5
   },
   "right": {
     "id": "5bde9680b6f8dda1",
@@ -65,6 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "前端工程/React-CLI 代码模板快速生成.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -81,6 +86,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "前端工程/React-CLI 代码模板快速生成.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": true
               }
@@ -91,7 +97,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "前端工程/React-CLI 代码模板快速生成.md"
+              }
             }
           },
           {
@@ -122,15 +130,15 @@
   },
   "active": "a1da157c1d70b7ba",
   "lastOpenFiles": [
+    "前端工程/Vue-CLI 实现.md",
+    "前端工程/实现 CLI.md",
+    "前端工程/React-CLI 代码模板快速生成.md",
+    "综合/关键渲染路径.md",
     "JavaScript/async-await 是如何实现的.md",
     "JavaScript/函数, 函数参数 arguments.md",
     "JavaScript/更加优雅地处理async-await.md",
     "Vue/Vue diff 算法.md",
     "Vue/Vue 3.md",
-    "前端工程/前端表单配置化.md",
-    "前端工程/浏览器性能指标解析.md",
-    "前端工程/页面性能 LCP 指标.md",
-    "前端工程/0 前端工程.md",
-    "前端工程/3.规范化.md"
+    "前端工程/前端表单配置化.md"
   ]
 }
