--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "baseFontSize": 16,
-  "theme": "system",
+  "theme": "obsidian",
   "translucency": false,
   "cssTheme": "Minimal",
   "accentColor": ""
